Partial_14Dec2021/force-app/main/default/objects/Survey_Details__c/Survey_Details__c.object-meta.xml
<CustomObject>
    <description>Used to capture response of survey.</description>
    <label>Survey Details</label>
    <nameField>
        <displayFormat>Survey Details-{0000}</displayFormat>
        <label>Survey Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>