Partial_14Dec2021/force-app/main/default/objects/Survey_Details__c/fields/Master_Questions__c.field-meta.xml
<CustomField>
    <fullName>Master_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Questions</label>
    <referenceTo>Master_Questions__c</referenceTo>
    <relationshipLabel>Survey Details</relationshipLabel>
    <relationshipName>Survey_Details</relationshipName>
    <type>Lookup</type>
</CustomField>