Partial_14Dec2021/force-app/main/default/objects/Survey_Details__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS</label>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>Survey Details</relationshipLabel>
    <relationshipName>Survey_Details</relationshipName>
    <type>Lookup</type>
</CustomField>