Partial_14Dec2021/force-app/main/default/objects/Survey_Details__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Used to capture response from feedback form</description>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>